--- a/Mon Portfolio Web/style.css
+++ b/Mon Portfolio Web/style.css
@@ -677,4 +677,38 @@ footer span a:hover{
         font-size: 23px;
         line-height: 38px;
     }
+
+
+
+
+      
+      a {
+        width: 50px;
+        color: crimson;
+      }
+
+      .fa {
+        padding: 20px;
+        font-size: 30px;
+        width: 50px;
+        text-align: center;
+        text-decoration: none;
+        margin: 5px 2px;
+      }
+      
+      .fa:hover {
+          opacity: 0.7;
+      }
+        
+      .fa-linkedin {
+        background: #007bb5;
+        color: white;
+      }
+      
+      .fa-instagram {
+        background: #125688;
+        color: white;
+      }
+
+  
 }
